--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "passport": "*",
         "passport-local": ">= 0.0.0",
         "mongoose" :"3.x.x",
-        "underscore" : "1.4.2",
+        "underscore" : "1.4.2"
     },
     "engines": {
         "node": "*"
