--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "author": "Fernando Godino",
     "name": "TODOList",
     "description": "A TODO app with user support",
-    "version": "0.0.1-1",
+    "version": "0.0.1-2",
     "repository": {
         "type": "git",
         "url": "git://github.com/fgodino/TODOList.git"
@@ -20,7 +20,8 @@
         "socket.io": "0.9.x",
         "node-uuid": "1.4.0",
         "passport.socketio": "0.0.4",
-        "async": "0.1.x"
+        "async": "0.1.x",
+        "mailer" : "0.6.7"
     },
     "engines": {
         "node": "*"
