--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "author": "Fernando Godino",
     "name": "TODOList",
     "description": "A TODO app with user support",
-    "version": "0.0.1-10",
+    "version": "0.0.1-17",
     "repository": {
         "type": "git",
         "url": "git://github.com/fgodino/TODOList.git"
@@ -21,7 +21,7 @@
         "node-uuid": "1.4.0",
         "passport.socketio": "0.0.4",
         "async": "0.1.x",
-        "mailer": "0.6.7"
+        "nodemailer" : "0.3.x"
     },
     "engines": {
         "node": "*"
